Fix: styling of scrollbar and tidy up the layout

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     margin-right: auto;
     display: flex;
     flex-flow: row wrap;
+    overflow-x: hidden;
 }
 
 .par-2-2-5em {
@@ -22,7 +23,7 @@ body {
     font-size: clamp(0.9rem, 3vw, 1.2rem) !important;
 }
 
-.par-1em, p, label, button, a, input, tr, select, .input-group-text, .custom-range-field > * {
+.par-1em, p, label, button, a, input, tr, select, .input-group-text, .custom-range-field > *, .text-danger{
     font-size: clamp(0.8rem, 3vw, 1rem) !important;
 }
 
@@ -549,7 +550,7 @@ option {
     transform: scale(1);
 }
 
-.table-responsive::-webkit-scrollbar {
+::-webkit-scrollbar {
     height: 16px;
 }
 
@@ -557,12 +558,23 @@ option {
     background-color: rgba(64, 64, 64, .5);
 }
 
+.card-horizontal-scroll::-webkit-scrollbar-track {
+    background-color: var(--white);
+}
+
+.card-horizontal-scroll::-webkit-scrollbar-thumb,
 .table-responsive::-webkit-scrollbar-thumb {
     background-color: rgb(96, 96, 96);
     background-clip: padding-box;
     border: 2px solid transparent;
     border-radius: 10px;
 }
+
+.card-horizontal-scroll::-webkit-scrollbar-thumb {
+    background-color: rgb(180, 180, 180);
+    background-clip: padding-box;
+}
+
 
 .table-responsive::-webkit-scrollbar-thumb:hover {
     background-color: rgb(112, 112, 112);
@@ -587,10 +599,10 @@ table tbody tr td {
 }
 
 .lendee-payment-section > *:first-child,
-.lendee-payment-section > *:last-child,
-.lendee-payment-detail > *:first-child,
-.lendee-payment-detail > *:nth-last-child(2),
-.lendee-payment-detail > *:last-child {
+.lendee-payment-section > *:last-child > *:first-child,
+.lendee-payment-section > *:last-child > *:nth-child(2) > *:last-child,
+.lendee-payment-section > *:last-child > *:nth-child(3),
+.lendee-payment-section > *:last-child > *:last-child {
     padding-inline: calc(15% / 2) !important;
 }
 
@@ -656,10 +668,6 @@ button.btn {
 .btn-border:hover, .btn-border:focus {
     border-color: var(--secondary) !important;
     color: var(--secondary) !important;
-}
-
-.card-horizontal-scroll::-webkit-scrollbar {
-    display: none;
 }
 
 .announcement .pagination {
